...
    return Scaffold(
      appBar: AppBar(
        title: Text(degree.name, style: Theme.of(context).textTheme.bodyMedium),
        actions: [
          IconButton(
            icon: const Icon(Icons.add),
            tooltip: 'Add Year',
            onPressed: () => repo.addYear(degreeId),
          ),
          PopupMenuButton<int>(
            onSelected: (value) {
              if (value == 0) {
                showDialog(
...
